ConcreteSearchParameter.feature edited